--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
 
   <!-- HOME PAGE -->
   <div class="home hidden" id="homePage">
-    <!-- NAVBAR -->
     <nav class="navbar">
       <div class="nav-left">
         <div class="hamburger" id="hamburger">☰</div>
         <h2>JPMAP</h2>
-        <!-- Navbar Avatar -->
         <img src="profile.jpg" alt="Avatar" id="navAvatar" class="nav-avatar">
       </div>
       <input type="text" placeholder="Search..." id="searchBar" />
@@ -56,7 +54,7 @@
       <button id="logoutSide">Logout</button>
     </div>
 
-    <!-- MAIN CONTENT -->
+    <!-- SCROLLABLE AREA -->
     <main class="main-content">
       <section class="intro-section">
         <h1>Welcome, <span id="displayUser"></span>!</h1>
@@ -80,6 +78,34 @@
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic" id="profilePic" />
     <p id="profileName">Username: <span id="profileUsername"></span></p>
     <input type="file" id="avatarInput" accept="image/*" />
+  </div>
+
+  <!-- SETTINGS PAGE -->
+  <div class="settings hidden" id="settingsPage">
+    <button id="settingsHomeBtn">← Home</button>
+    <h1>Settings</h1>
+
+    <div class="setting-item">
+      <label>🌗 Theme Mode:</label>
+      <button id="themeToggle">Toggle Light/Dark Mode</button>
+    </div>
+
+    <div class="setting-item">
+      <label>🎵 Background Music:</label>
+      <button id="musicToggle">Play / Pause</button>
+      <audio id="bgMusic" loop>
+        <source src="Assets/Music/chill.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+
+    <div class="setting-item">
+      <label>💡 Accent Color:</label>
+      <input type="color" id="accentPicker" value="#00b4d8">
+    </div>
+
+    <div class="setting-item">
+      <button id="resetSettings">Reset to Default</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
